--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,28 +13,28 @@
         android:theme="@style/Theme.PPT_Kotders"
         tools:targetApi="31">
         <activity
-            android:name=".activities.HistoricoActivity"
+            android:name=".Historico"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat"/>
         <activity
-            android:name=".activities.SolucionJuego"
+            android:name=".SolucionJuego"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat"/>
         <activity
-            android:name=".activities.Juego"
+            android:name=".Juego"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat"/>
         <activity
-            android:name=".activities.MenuActivity"
+            android:name=".Menu"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat"/>
 
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
