--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,22 +13,22 @@
         android:theme="@style/Theme.PPT_Kotders"
         tools:targetApi="31">
         <activity
-            android:name=".Historico"
+            android:name=".controllers.Historico"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat"/>
         <activity
-            android:name=".SolucionJuego"
+            android:name=".controllers.SolucionJuego"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat"/>
         <activity
-            android:name=".Juego"
+            android:name=".controllers.Juego"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat"/>
         <activity
-            android:name=".Menu"
+            android:name=".controllers.Menu"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat"/>
