--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <!-- Include only if your app benefits from precise location access. -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <!-- Recommended for Android 9 (API level 28) and lower. -->
-    <!-- Required for Android 10 (API level 29) and higher. -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -24,6 +23,7 @@
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat"/>
+
         <activity
             android:name=".controllers.SolucionJuego"
             android:exported="false"
@@ -36,6 +36,12 @@
             android:theme="@style/Theme.AppCompat"/>
         <activity
             android:name=".controllers.Menu"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat"/>
+
+        <activity
+            android:name=".controllers.NotiVictoria"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat"/>
