--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -30,7 +31,7 @@
             android:theme="@style/Theme.AppCompat"/>
 
         <activity
-            android:name=".controllers.ayuda"
+            android:name=".controllers.Ayuda"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat"/>
@@ -51,7 +52,7 @@
             android:theme="@style/Theme.AppCompat"/>
 
         <activity
-            android:name=".controllers.NotiVictoria"
+            android:name=".controllers.NotificacionVictoria"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat"/>
