--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
-    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -31,7 +30,7 @@
             android:theme="@style/Theme.AppCompat"/>
 
         <activity
-            android:name=".controllers.Ayuda"
+            android:name=".controllers.ayuda"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat"/>
@@ -52,7 +51,7 @@
             android:theme="@style/Theme.AppCompat"/>
 
         <activity
-            android:name=".controllers.NotificacionVictoria"
+            android:name=".controllers.NotiVictoria"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat"/>
