--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
 
-    <!-- Always include this permission retrieved from https://developer.android.com/training/location/permissions?hl=es-419 -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!-- Include only if your app benefits from precise location access. -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- Always include this permission retrieved from https://developer.android.com/training/location/permissions?hl=es-419 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- Include only if your app benefits from precise location access. -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -26,38 +24,40 @@
         android:theme="@style/Theme.PPT_Kotders"
         tools:targetApi="31">
         <activity
+            android:name=".controllers.LoginActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat" />
+        <activity
             android:name=".controllers.Historico"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat"/>
-
+            android:theme="@style/Theme.AppCompat" />
         <activity
             android:name=".controllers.ayuda"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat"/>
+            android:theme="@style/Theme.AppCompat" />
         <activity
             android:name=".controllers.SolucionJuego"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat"/>
+            android:theme="@style/Theme.AppCompat" />
         <activity
             android:name=".controllers.Juego"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat"/>
+            android:theme="@style/Theme.AppCompat" />
         <activity
             android:name=".controllers.Menu"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat"/>
-
+            android:theme="@style/Theme.AppCompat" />
         <activity
             android:name=".controllers.NotiVictoria"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat"/>
-
+            android:theme="@style/Theme.AppCompat" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -67,14 +67,15 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!-- Recommended for Android 9 (API level 28) and lower. -->
+        </activity> <!-- Recommended for Android 9 (API level 28) and lower. -->
         <!-- Required for Android 10 (API level 29) and higher. -->
         <service
             android:name=".services.CurrentLocation"
             android:foregroundServiceType="location">
-        <!-- Any inner elements would go here. -->
+
+            <!-- Any inner elements would go here. -->
         </service>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
