--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
         tools:targetApi="31">
         <activity
             android:name=".controllers.Clasificacion"
-            android:exported="false" />
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat"/>
         <activity
             android:name=".controllers.LoginActivity"
             android:exported="false"
