--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" /> <!-- Always include this permission retrieved from https://developer.android.com/training/location/permissions?hl=es-419 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- Include only if your app benefits from precise location access. -->
@@ -22,7 +22,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PPT_Kotders"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".controllers.Ranking"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat" />
         <activity
             android:name=".controllers.LoginActivity"
             android:exported="false"
@@ -61,7 +66,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -71,7 +76,7 @@
         <!-- Required for Android 10 (API level 29) and higher. -->
         <service
             android:name=".services.CurrentLocation"
-            android:foregroundServiceType="location">
+            android:foregroundServiceType="location" >
 
             <!-- Any inner elements would go here. -->
         </service>
